# Soda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh
src/: main.cpp  typedefs.hpp
src/api/: fs.cpp  shell.cpp  toml.cpp
src/api/include/: fs.hpp  shell.hpp  toml.hpp
src/compilers/: clang.cpp  gnu.cpp  msvc.cpp
src/compilers/include/: clang.hpp  gnu.hpp  msvc.hpp
src/core/: cli.cpp  config.cpp  shell.cpp  test.cpp
src/core/include/: cli.hpp  compilation.hpp  config.hpp  shell.hpp  test.hpp
src/subcommands/: build.cpp  clean.cpp  new.cpp  run.cpp
src/subcommands/include/: build.hpp  clean.hpp  new.hpp  run.hpp
